# media-processor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  alembic.ini  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.ai-review/: pre-commit-review.json
.github/workflows/: ci.yml  deploy-production.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_m3_uploads.py  0003_m4_analysis.py  0004_app_settings.py  0005_m5_auto_edit.py  0006_draft_comments.py  0007_project_bgm.py  0008_subtitle_cue.py  0009_bgm_generation.py  0010_asset_tracking.py  0011_draft_bgm.py  0012_asset_tracking_target.py  0013_draft_segment_volume.py  0014_draft_style_preset.py  0014_project_watermark.py  0014_secondary_subtitles.py  0015_project_subtitle_style.py  0016_draft_style_preset.py  0017_secondary_subtitles.py  0018_project_subject_class.py  0019_draft_render_flags.py  0020_watermark_presets.py  0021_asset_point_tracking.py  0022_project_bgm_fade_out.py  0023_draft_render_retry_count.py  0024_asset_point_tracking_status.py  0025_draft_exports.py  0026_aspect_ratios_redux.py  0027_project_smart_camera.py  0028_asset_stabilized_variants.py  0029_asset_variant_analysis_snapshots.py  0030_asset_stabilization_mode.py  0031_fix_stabilization_metrics_json_type.py  0032_upload_session_total_size_bigint.py  0033_story_scripts.py  0034_story_narration_assets.py  0035_asset_frame_analysis.py  0036_draft_trust_report.py
docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
docs/: capcut_draft_schema_findings.md  clip_zero_shot_findings.md  fs_access_api_findings.md
profiles/: carsmeet-luxury.yaml  universal.yaml
samples/: README.md
scripts/: backfill_thumbnails.py  clip_zero_shot_probe.py  seed_music_library.py  verify_fs_access_api.html  verify_gpu.sh  verify_smb.md
skills/camera-motion-decisions/: SKILL.md
skills/video-camera-movement/: SKILL.md
tests/: conftest.py
tests/unit/: test_asset_stabilization_runner.py  test_asset_variants_smoothing.py  test_auto_reframe.py  test_beat_sync.py  test_bgm_mixer.py  test_capcut_parser.py  test_capcut_writer.py  test_cut_planner.py  test_drafts_patch_router.py  test_drafts_segment_endpoints.py  test_edit_orchestrator.py  test_edit_planner.py  test_edit_planner_subject_filter.py  test_emotion.py  test_frame_analysis_service.py  test_health.py  test_llm_patcher.py  test_models.py  test_narration_script_generator.py  test_object_tracking_aggregate.py  test_opencode_client.py  test_point_tracking.py  test_profile_loader.py  test_project_fork.py  test_project_story_script_router.py  test_projects_edit_router.py  test_queue_router.py  test_routers.py  test_smart_camera_planner.py  test_story_script.py  test_story_tts.py  test_subtitles.py  test_thumbnails_service.py  test_trust_report.py  test_video_renderer.py  test_watchdog.py  (+1 more)
web/: .dockerignore  .env.example  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+377 files in other folders)
