[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "media-processor"
version = "0.30.33"
description = "Content factory pipeline for short-form video production"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.0",
    "rq>=2.0.0",
    "python-multipart>=0.0.17",
    "pyyaml>=6.0.2",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0.12",
]
# M4 — heavy GPU/CV deps only the worker container installs.
# Pinning to majors so the worker image build is reproducible without
# constraining the api image (which doesn't import these).
analysis = [
    "faster-whisper>=1.0.3,<2.0",
    "opencv-python-headless>=4.10.0,<5.0",
    "opencc>=1.1.7",
    "numpy>=1.26.0,<3.0",
    "Pillow>=10.4.0",
    # Phase 8.1 — face emotion analysis via MediaPipe Face Landmarker.
    # Pinned to 0.10.x because the Tasks API surface stabilised there.
    "mediapipe>=0.10.14,<0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/media_processor"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RET"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
